--- a/Caching/Caching.csproj
+++ b/Caching/Caching.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>Caching</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,6 +45,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Web.Services" />
@@ -82,11 +85,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICachingService.cs" />
+    <Compile Include="Extensions\CachingServicesExtensions.cs" />
+    <Compile Include="Helpers\CacheKeyBuilder.cs" />
+    <Compile Include="Helpers\ICacheKeyBuilder.cs" />
+    <Compile Include="Services\ICachingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\CountriesCachingProvider.cs" />
-    <Compile Include="Providers\ICountiesCachingProvider.cs" />
-    <Compile Include="RedisCachingService.cs" />
+    <Compile Include="Providers\CachingProvider.cs" />
+    <Compile Include="Providers\ICachingProvider.cs" />
+    <Compile Include="Providers\CachedCountriesProvider.cs" />
+    <Compile Include="Services\RedisCachingService.cs" />
     <Compile Include="Configuration\UnityConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -101,11 +108,8 @@
       <Project>{AC2453DA-CF65-43F6-9105-E7197ED82C53}</Project>
       <Name>Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Infrastructure.Common\Infrastructure.Common.csproj">
-      <Project>{6E566FE7-9B59-4642-98CF-593494CD76C8}</Project>
-      <Name>Infrastructure.Common</Name>
-    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
