--- a/Redis.POC/Web.config
+++ b/Redis.POC/Web.config
@@ -8,7 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="RedisConfiguration" value="localhost" />
+  </appSettings>
   <connectionStrings>
     <add name="Database" connectionString="Data Source=(local);Initial Catalog=IPManagerDev;User Id=IPManager;Password=IPManager;Min Pool Size=0;Max Pool Size=200;MultipleActiveResultSets=True;Persist Security Info=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
