--- a/Data.Entities/Data.Entities.csproj
+++ b/Data.Entities/Data.Entities.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodesDb.cs" />
     <Compile Include="CountryDb.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
