--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -52,9 +52,12 @@
     <Compile Include="CustomDbContext.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="Mapping\CodesMapping.cs" />
     <Compile Include="Mapping\CountriesMapping.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\CodesProvider.cs" />
     <Compile Include="Providers\CountriesProvider.cs" />
+    <Compile Include="Providers\ICodesProvider.cs" />
     <Compile Include="Providers\ICountriesProvider.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="UnitOfWork.cs" />
