--- a/Redis.POC/Redis.POC.csproj
+++ b/Redis.POC/Redis.POC.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Configuration\UnityResolver.cs" />
     <Compile Include="Configuration\WebApiConfig.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\CodesController.cs" />
     <Compile Include="Controllers\CountriesController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
